--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,7 @@
 # Site navigation links
 
-- title: About
+- title: About me
   url: /about/
-
-- title: Articles
-  url: /articles/
 
 - title: Blog
   url: /blog/
-
-- title: Theme Setup
-  url: /theme-setup/
