Trying to fix Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ owner:
   tumblr: #username
   google:
     plus: #username
-    analytics: UA-54813961-1
+    analytics:
     verify:
     ad-client:
     ad-slot: 
