Added new pages (no text written in them)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,13 @@
 # Site navigation links
 
-- title: About me
-  url: /about/
-
 - title: Blog
   url: /blog/
+
+- title: Minecraft
+  url: /minecraft/
+
+- title: XDA Developers
+  url: /xda/
+
+- title: About me
+  url: /about/
