--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 # Site owner
 owner:
   name: Dennis Motta
+  nickname: Desno365
   avatar: site-logo.png
   email: desno365@gmail.com
   disqus-shortname:
