--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   nickname: Desno365
   avatar: site-logo.png
   email: desno365@gmail.com
-  disqus-shortname:
+  disqus-shortname: desno365githubio
   twitter: desno365
   facebook: #username
   github: Desno365
