Added Google plus (footer)

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,6 @@ owner:
   flickr: #username
   tumblr: #username
   google:
-    plus: #username
+    plus: "106483807318419954795"
     ad-client:
     ad-slot: 
