This should be more correct

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Desno365's blog
 locale: en_US
-description: Just a little website where I publish what I made and what I think.
+description: Just a little website where I publish what I have made and what I think.
 logo: site-logo.png
 search: true
 url: http://desno365.github.io
