--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Just a little website where I publish what I have made and what I think.
 logo: site-logo.png
 search: true
-url: http://0.0.0.0:4000 #http://desno365.github.io
+url: http://desno365.github.io
 
 
 # Jekyll configuration
