Removed Built-in search
(it was useless for the purpose of the website)

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Desno365's blog
 locale: en_US
 description: Just a little website where I publish what I have made.
 logo: site-logo.png
-search: true
+search: false
 url: http://desno365.github.io
 
 
