Updated config with the new url; Fixed screen width caused by the download table

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Just a little website where I publish what I have made.
 logo: site-logo.png
 search: false
-url: http://desno365.github.io
+url: http://desno365.net
 
 
 # Jekyll configuration
