Revert "Update FAQ"
This reverts commit a68b8a395622faf4e67e04641cde55a9e942980a.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Just a little website where I publish what I have made.
 logo: site-logo.png
 search: false
-url: http://0.0.0.0:4000 #http://desno365.net
+url: http://desno365.net
 
 
 # Jekyll configuration
