--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: Site Title
+title: Desno365's blog
 locale: en_US
-description: Describe your website here.
+description: Just a little website where I publish what I have made.
 logo: site-logo.png
-search: true
-url: http://0.0.0.0:4000 #http://localhost:4000
+search: false
+url: http://0.0.0.0:4000 #http://desno365.net
 
 # Jekyll configuration
 
