Little changes in website description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Desno365's blog
 locale: en_US
-description: Just a little website where I publish my works.
+description: Just a little website where I publish the things I make.
 logo: site-logo.png
 search: false
 url: http://desno365.net
