Change website to https

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Just a little website where I publish the things I make.
 logo: site-logo.png
 search: false
-url: http://desno365.net
+url: https://desno365.net
 
 # Jekyll configuration
 
