Change site title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title: Desno365's blog
+title: Desno365's creations
 locale: en_US
-description: Just a little website where I publish the things I make.
+description: Games, Minecraft Mods and more...
 logo: site-logo.png
 search: false
 url: https://desno365.net
